fixed minor layout issues

--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@ a {
     margin: 0;
 }
 
-p {
+.p-padding {
     padding: 1.25rem 0;
 }
 
@@ -62,6 +62,7 @@ p {
 .main-tab {
     font-size: 2rem;
     font-weight: bold;
+    padding: 1.25rem 0;
 }
 
 .main-item {
@@ -153,9 +154,8 @@ p {
 }
 
 .model-icon {
-    padding: 10%;
-    width: 40vw;
-    height: 40vw;
+    width: 50vw;
+    height: 50vw;
 }
 
 .model-info-message {
@@ -285,10 +285,18 @@ input[type=file] {
     html {
         font-size: 80%;
     }
-    .model-icon {
-        width: 20vw;
+    .image {
+        width: 30vw;
         height: auto;
+    }
+    .model-icon {
+        width: 30vw;
+        height: 30vw;
         padding: 5%;
+    }
+    .button {
+        width: 20vw;
+        height: 8vw;
     }
     .column-only-mobile {
         padding-top: 30px;
@@ -296,7 +304,7 @@ input[type=file] {
         flex-direction: row;
     }
     .width-100-only-mobile {
-        width: 80%;
+        width: 50%;
     }
     .model-info-message {
         width: 80vw;
